--- a/lailabd[1]/lailabd/pom.xml
+++ b/lailabd[1]/lailabd/pom.xml
@@ -5,10 +5,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
-  		<groupId>com.google.firebase</groupId>
-  		<artifactId>firebase-admin</artifactId>
- 		 <version>9.4.0</version>
-		</dependency>     
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>9.4.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-firestore</artifactId>
+      <version>3.28.0</version>
+      <type>jar</type>
+    </dependency>
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>    
